--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							</div>
 							<div class="project-img doc-page"><a
 									href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/DOCUMENTATION%20PAGE/index.html"
-									target="_blank"><img src="./images/documentation-page-bg.jpg"
+									target="_blank"><img src="./images/documentation-page-bg.webp"
 										alt="Documentation Page" /></a></div>
 						</div>
 						<div class="project-card">
@@ -81,7 +81,7 @@
 							</div>
 							<div class="project-img vr-page"><a
 									href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/LOOPSTUDIOS-PAGE/index.html"
-									target="_blank"><img src="./images/loop-studio-img.png"
+									target="_blank"><img src="./images/loop-studio-bg.webp"
 										alt="Loop Studio Page" /></a></div>
 						</div>
 						<div class="project-card">
@@ -96,7 +96,7 @@
 							</div>
 							<div class="project-img room-page"><a
 									href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/ROOM%20-%20HOMEPAGE/"
-									target="_blank"><img src="./images/room-homepage-bg.PNG" alt="Room Homepage" /></a>
+									target="_blank"><img src="./images/room-homepage-bg.webp" alt="Room Homepage" /></a>
 							</div>
 						</div>
 					</div>
@@ -118,7 +118,7 @@
 							</div>
 							<div class="project-img calculator"><a
 									href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/CALCULATOR%20APP/index.html"
-									target="_blank"><img src="./images/calculator.PNG" alt="Calculator" /></a></div>
+									target="_blank"><img src="./images/calculator-bg.webp" alt="Calculator" /></a></div>
 						</div>
 						<div class="project-card">
 							<div class="project-info">
@@ -132,7 +132,7 @@
 							</div>
 							<div class="project-img hangman"><a
 									href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/HANGMAN/index.html"
-									target="_blank"><img src="./images/hangman-bg.jpg" alt="Hangman" /></a></div>
+									target="_blank"><img src="./images/hangman-bg.webp" alt="Hangman" /></a></div>
 						</div>
 						<div class="project-card">
 							<div class="project-info">
@@ -147,7 +147,7 @@
 							</div>
 							<div class="project-img flappy-bird"><a
 									href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/FLAPPY%20BIRD/menu.html"
-									target="_blank"><img src="./images/flappy-bird-bg.png" alt="Flappy Bird" /></a>
+									target="_blank"><img src="./images/flappy-bird-bg.webp" alt="Flappy Bird" /></a>
 							</div>
 						</div>
 						<div class="project-card">
@@ -160,7 +160,7 @@
 							</div>
 							<div class="project-img meme-gen"><a
 									href="https://tranphuongdinh.github.io/MemeGeneratorAppDemo/" target="_blank"><img
-										src="./images/meme-gen-bg.jpg" alt="Meme Generator" /></a></div>
+										src="./images/meme-gen-bg.webp" alt="Meme Generator" /></a></div>
 						</div>
 						<div class="project-card">
 							<div class="project-info">
@@ -172,7 +172,7 @@
 									class="project-info-btn">View Demo <span class="bottom-border"></span></a>
 							</div>
 							<div class="project-img paint"><a href="https://tranphuongdinh.github.io/SIMPLE-PAINT/"
-									target="_blank"><img src="./images/paint-bg.jpg" alt="Paint" /></a></div>
+									target="_blank"><img src="./images/paint-bg.webp" alt="Paint" /></a></div>
 						</div>
 					</div>
 				</div>
