--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="container">
 					<div class="home-info"><span>hi,
 							i'm</span><br />
-						<h1 class="home-info-title">tran phuong dinh</h1>
+						<h1 class="home-info-title"></h1>
 						<h3 class="home-info-subtitle">front end developer</h3>
 					</div>
 					<div class="music-player"><canvas id="canvas"></canvas>
