--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
 								</div>
 								<div class="project-info-tag"><span class="info-tag">HTML</span><span
 										class="info-tag">CSS</span><span class="info-tag">JS</span></div><a
-									href="https://github.com/TranPhuongDinh/BadAppleAscii"
+									href="https://www.facebook.com/100008190586110/videos/2887868274829497/"
 									target="_blank" class="project-info-btn">View Demo <span
 										class="bottom-border"></span></a>
 							</div>
 							<div class="project-img badApple"><a
-									href="https://github.com/TranPhuongDinh/BadAppleAscii"
+									href="https://www.facebook.com/100008190586110/videos/2887868274829497/"
 									target="_blank"><img src="./images/badApple-bg.webp" alt="Bad Apple" /></a></div>
 						</div>
 						<div class="project-card">
@@ -226,11 +226,11 @@
 									<div><span>Year:</span> 2020</div>
 								</div>
 								<div class="project-info-tag"><span class="info-tag">REACT</span></div><a
-									href="https://tranphuongdinh.github.io/MemeGeneratorAppDemo/" target="_blank"
+									href="https://tranphuongdinh.github.io/MemeGenerator/" target="_blank"
 									class="project-info-btn">View Demo <span class="bottom-border"></span></a>
 							</div>
 							<div class="project-img meme-gen"><a
-									href="https://tranphuongdinh.github.io/MemeGeneratorAppDemo/" target="_blank"><img
+									href="https://tranphuongdinh.github.io/MemeGenerator/" target="_blank"><img
 										src="./images/meme-gen-bg.webp" alt="Meme Generator" /></a></div>
 						</div>
 						<div class="project-card">
@@ -244,10 +244,10 @@
 								</div>
 								<div class="project-info-tag"><span class="info-tag">HTML</span><span
 										class="info-tag">CSS</span><span class="info-tag">JS</span></div><a
-									href="https://tranphuongdinh.github.io/SIMPLE-PAINT/" target="_blank"
+									href="./PROJECTS/SIMPLE PAINT/index.html" target="_blank"
 									class="project-info-btn">View Demo <span class="bottom-border"></span></a>
 							</div>
-							<div class="project-img paint"><a href="https://tranphuongdinh.github.io/SIMPLE-PAINT/"
+							<div class="project-img paint"><a href="./PROJECTS/SIMPLE PAINT/index.html"
 									target="_blank"><img src="./images/paint-bg.webp" alt="Paint" /></a></div>
 						</div>
 					</div>
