fixed paint link

--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
 								</div>
 								<div class="project-info-tag"><span class="info-tag">HTML</span><span
 										class="info-tag">CSS</span><span class="info-tag">JS</span></div><a
-									href="./PROJECTS/SIMPLE PAINT/index.html" target="_blank"
+									href="https://tranphuongdinh.github.io/SimplePaint/" target="_blank"
 									class="project-info-btn">View Demo <span class="bottom-border"></span></a>
 							</div>
-							<div class="project-img paint"><a href="./PROJECTS/SIMPLE PAINT/index.html"
+							<div class="project-img paint"><a href="https://tranphuongdinh.github.io/SimplePaint/"
 									target="_blank"><img src="./images/paint-bg.webp" alt="Paint" /></a></div>
 						</div>
 					</div>
