add pre-load effect

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
         <title>Dinh Tran</title>
         <script src="https://use.fontawesome.com/eb06b48c58.js"></script>
         <link rel="stylesheet" href="./assets/css/index.css" />
+        <link rel="shortcut icon" href="./images/DT.webp" />
     </head>
     <body>
         <span class="project-tooltip"></span>
+        <div id="loading">
+            <img
+                id="loading-image"
+                src="./images/loading.gif"
+                alt="Loading Screen"
+            />
+        </div>
         <div class="description-modal">
             <span class="description-modal__close fa fa-times-circle-o"></span>
             <div class="description-modal__details">
