--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Dinh Tran</title>
         <script src="https://use.fontawesome.com/eb06b48c58.js"></script>
         <link rel="stylesheet" href="./assets/css/index.css" />
-        <link rel="shortcut icon" href="./images/DT.webp" />
+        <link rel="shortcut icon" href="./images/avt.webp" />
     </head>
     <body>
         <span class="project-tooltip"></span>
