--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="documentation-page"
                                         src="./images/documentation-page-bg.webp"
                                         alt="Documentation Page"
                                     />
@@ -421,6 +422,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="room-homepage"
                                         src="./images/room-homepage-bg.webp"
                                         alt="Room Homepage"
                                     />
@@ -433,6 +435,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="loopstudio-page"
                                         src="./images/loop-studio-bg.webp"
                                         alt="Loopstudio Page"
                                     />
@@ -445,6 +448,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="meme-generator"
                                         src="./images/meme-gen-bg.webp"
                                         alt="Meme Generator"
                                     />
@@ -457,6 +461,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="paint"
                                         src="./images/paint-bg.webp"
                                         alt="Paint"
                                     />
@@ -469,6 +474,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="bad-apple"
                                         src="./images/badApple-bg.webp"
                                         alt="Bad Apple"
                                     />
@@ -481,6 +487,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="weather-forecast"
                                         src="./images/weatherForecast-bg.webp"
                                         alt="Weather Forecast"
                                     />
@@ -493,6 +500,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="calculator"
                                         src="./images/calculator-bg.webp"
                                         alt="Calculator"
                                     />
@@ -505,6 +513,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="hangman"
                                         src="./images/hangman-bg.webp"
                                         alt="Hangman"
                                     />
@@ -517,6 +526,7 @@
                             >
                                 <div class="item__img">
                                     <img
+                                        id="flappy-bird"
                                         src="./images/flappy-bird-bg.webp"
                                         alt="Flappy Bird"
                                     />
