fixed Paint link

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                             </li>
                             <li
                                 class="all app galery-item galery-item-tooltip"
-                                data-url="./PROJECTS/SIMPLE PAINT/index.html"
+                                data-url="https://tranphuongdinh.github.io/SimplePaint/"
                                 data-name="Simple Paint"
                             >
                                 <div class="item__img">
