change project iframe to img and add magic cursor

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel="shortcut icon" href="./images/avt-circle.webp" />
     </head>
     <body>
+        <div id="circle-cursor">
+            <div id="circle-cursor-dot"></div>
+        </div>
         <span class="project-tooltip"></span>
         <div class="preload">
             <div class="left"></div>
@@ -533,48 +536,54 @@
                                 </div>
                             </li>
                             <li
-                                class="all others galery-item"
-                                data-url="https://www.youtube.com/OfrRXK3a6pw"
-                                data-name=""
+                                class="
+                                    all
+                                    others
+                                    galery-item galery-item-tooltip
+                                "
+                                data-url="https://www.youtube.com/embed/dPnHg6OUIIU"
+                                data-name="Social Responsibility - WHAT AND WHY?"
                             >
-                                <div class="item__iframe">
-                                    <iframe
-                                        src="https://www.youtube.com/embed/OfrRXK3a6pw"
-                                        title="YouTube video player"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen
-                                    ></iframe>
+                                <div class="item__img">
+                                    <img
+                                        id="social-responsibility"
+                                        src="./images/social-responsibility.webp"
+                                        alt="Social Responsibility - WHAT AND WHY?"
+                                    />
                                 </div>
                             </li>
                             <li
-                                class="all others galery-item"
-                                data-url="https://www.youtube.com/PdHPwGvnvzI"
-                                data-name=""
+                                class="
+                                    all
+                                    others
+                                    galery-item galery-item-tooltip
+                                "
+                                data-url="https://www.youtube.com/embed/OfrRXK3a6pw"
+                                data-name="Project Snake - The Game"
                             >
-                                <div class="item__iframe">
-                                    <iframe
-                                        src="https://www.youtube.com/embed/PdHPwGvnvzI"
-                                        title="YouTube video player"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen
-                                    ></iframe>
+                                <div class="item__img">
+                                    <img
+                                        id="snake-the-game"
+                                        src="./images/snake-the-game.webp"
+                                        alt="Snake The Game"
+                                    />
                                 </div>
                             </li>
                             <li
-                                class="all others galery-item"
-                                data-url="https://www.youtube.com/dPnHg6OUIIU"
-                                data-name=""
+                                class="
+                                    all
+                                    others
+                                    galery-item galery-item-tooltip
+                                "
+                                data-url="https://www.youtube.com/embed/PdHPwGvnvzI"
+                                data-name="Coding Flappy Bird in 60 minutes"
                             >
-                                <div class="item__iframe">
-                                    <iframe
-                                        src="https://www.youtube.com/embed/dPnHg6OUIIU"
-                                        title="YouTube video player"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen
-                                    ></iframe>
+                                <div class="item__img">
+                                    <img
+                                        id="flappy-bird-youtube"
+                                        src="./images/flappy-bird-youtube.webp"
+                                        alt="Coding Flappy Bird in 60 minutes"
+                                    />
                                 </div>
                             </li>
                         </ul>
