--- a/index.html
+++ b/index.html
@@ -291,6 +291,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="music-player">
+                        <canvas id="canvas"></canvas>
+                    </div>
                 </div>
                 <div class="section about" id="about">
                     <div class="about__main">
